# balau-unit-test-maven-plugin

./: README.md  pom.xml
src/main/java/com/borasoftware/balau/: BalauUnitTestMojo.java
src/test/java/com/borasoftware/balau/: BalauUnitTestMojoTest.java
src/test/test-project/: CMakeLists.txt  pom.xml
src/test/test-project/src/main/cpp/: App.cpp  Lib.cpp  Lib.hpp
src/test/test-project/src/test/cpp/: LibIT.cpp  LibIT.hpp  LibTest.cpp  LibTest.hpp  Tests.cpp
